<resources>
    <string name="app_name">JumpBagPlus</string>
    <string name="splash_txt">Jump Bag Plus</string>
    <string name="psi_instruction">Enter the remaining pounds per square inch(PSI) of the tank:</string>
    <string name="psi_hint">Enter PSI</string>
    <string name="switch_label">200psi/500psi</string>
    <string name="CalcBtn">Calculate</string>
    <string name="lpm_instruction">Enter the flow rate in liters per minute(LPM):</string>
    <string name="lpm_hint">Enter LPM</string>
    <string name="tankSize_instruction">Select a tank size:</string>
    <string-array name="tankSizeArray">
        <item>D cylinder</item>
        <item>E cylinder</item>
        <item>M cylinder</item>
        <item>G cylinder</item>
        <item>H/K cylinder</item>
    </string-array>
    <string name="switch_instruction">Select a reserve oxygen supply. 200psi is the default setting.</string>
</resources>